Bug 124846 - Tools -> Customize does not complete move of main Menu objects
Summary: Tools -> Customize does not complete move of main Menu objects
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.2.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: Customise-Dialog
  Show dependency treegraph
 
Reported: 2019-04-19 13:12 UTC by abhilashr0095
Modified: 2019-04-22 20:07 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description abhilashr0095 2019-04-19 13:12:11 UTC
Description:
In Tools -- > Customize there is an option for changing the position of main menus in the menu bar. Even if I change the position, the change is not getting effect in the menu bar.

Steps to Reproduce:
1.Click Tools -->Customize
2.In the menu Tab. click the Settings (gear) button in the right side of the window(Below the caption Target)
3. Click "move" in the menu that appears now.
4. Click the top or bottom buttons to change the menu order.
5. Click OK in both the open windows

Actual Results:
No change in the order of Menus in menubar

Expected Results:
The Menu bar's order should change according to the change is settings.


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: SpreadsheetDocument
[Information guessed from browser]
OS: Windows 10 1803
OS is 64bit: Yes
Comment 1 V Stuart Foote 2019-04-19 16:51:08 UTC
Confirming behavior on Windows 10 Ent 64-bit en-US with
Version: 6.3.0.0.alpha0+ (x64)
Build ID: 74ed80b5744fdfacf9b9c3ef8ab235c64510c20d
CPU threads: 8; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-04-11_04:13:57
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

Selecting and moving an existing Menu class, selected via the Target drop list, using the dialog does not actually change the menu order. 

Likewise, the Add action New Menu dialog will create a new menu--but it is remains positioned after the last "standard" menu, i.e. after the Help entry. 

Adding additional user Menu objects can not subsequently be moved--and any added remain in sequence as created.

However, I'm not sure if the framework for the menus actually would allow user order changes of the main menu--and the UI is wrong to offer Move of those targets.
Comment 2 abhilashr0095 2019-04-19 19:30:19 UTC
To V. Stuart: This functionality would be very helpful to those who are used to the Alt-based shortcuts of MS Excel. I tried to create menus corresponding to the ribbon interface in Office 2007, but the menus are appearing after the Help menu. 

The first menu I tried to create is Home with the "Alt+" shortcut as "H". But since "H" shortcut is assigned to Help menu and Help menu is before the Home menu, when I press alt+H, the Focus goes to Help menu, not Home menu. Rearranging menu order will help in my issue, but that feature is broken.
Comment 3 Jim Raykowski 2019-04-20 02:10:22 UTC
Hi All,

While looking at this I noticed that the move up button is enabled when the Move dialog is first displayed so bonus fix with this patch :-)

https://gerrit.libreoffice.org/#/c/71001/
Comment 4 abhilashr0095 2019-04-20 12:35:35 UTC
To Jim Raykowski I'm not a programmer, so can u tell me how to use this fix in your link?
Comment 5 abhilashr0095 2019-04-20 12:36:53 UTC
(In reply to Jim Raykowski from comment #3)
> Hi All,
> 
> While looking at this I noticed that the move up button is enabled when the
> Move dialog is first displayed so bonus fix with this patch :-)
> 
> https://gerrit.libreoffice.org/#/c/71001/

I'm not a programmer, so can u tell me how to use this fix in your link?
Comment 6 V Stuart Foote 2019-04-20 12:58:08 UTC
(In reply to abhilashr0095 from comment #4)
> To Jim Raykowski I'm not a programmer, so can u tell me how to use this fix
> in your link?

At this point, you would have to be set up to clone project source (aka master against a future 6.3.0 release) and merge the proposed commit to do it yourself. 

Otherwise it is fine to wait a few days while the patch is reviewed and commented on and accepted, and then actually built into a daily on one of the TinderBox hosts [1]. Then install that in parallel as an admin install [2] and test the patch there. Actual inclusion into a production release could then be several months away--in the interim the dailys of master would continue to include it. 

=refs-=
[1] https://dev-builds.libreoffice.org/daily/master/
[2] https://wiki.documentfoundation.org/Installing_in_parallel
Comment 7 abhilashr0095 2019-04-20 16:37:27 UTC
(In reply to V Stuart Foote from comment #6)
> (In reply to abhilashr0095 from comment #4)
> > To Jim Raykowski I'm not a programmer, so can u tell me how to use this fix
> > in your link?
> 
> At this point, you would have to be set up to clone project source (aka
> master against a future 6.3.0 release) and merge the proposed commit to do
> it yourself. 
> 
> Otherwise it is fine to wait a few days while the patch is reviewed and
> commented on and accepted, and then actually built into a daily on one of
> the TinderBox hosts [1]. Then install that in parallel as an admin install
> [2] and test the patch there. Actual inclusion into a production release
> could then be several months away--in the interim the dailys of master would
> continue to include it. 
> 
> =refs-=
> [1] https://dev-builds.libreoffice.org/daily/master/
> [2] https://wiki.documentfoundation.org/Installing_in_parallel

Thank u so much. How do I know when this patch get included in daily build?

In that page (https://gerrit.libreoffice.org/#/c/71001/) a guy commented like this:
"Patch Set 1: Verified+1

Build Successful 

https://ci.libreoffice.org/job/gerrit_master/29002/ : SUCCESS"
Is it possible to download that build? Is it now included in daily build?
Comment 8 abhilashr0095 2019-04-20 16:38:39 UTC
Thank you so much, everyone. This is my first contribution to free software.
Comment 9 V Stuart Foote 2019-04-20 17:43:26 UTC
(In reply to abhilashr0095 from comment #7)
> ...
> Is it possible to download that build? Is it now included in daily build?

Not just yet.  Just watch the status for change from "Needs Code-Review Label" to "Merged" and grab a daily build sometime after the patch posts.
Comment 10 Commit Notification 2019-04-22 20:04:20 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9f32d341b80e1f1ffe28542f33003bfe5750639b%5E%21

tdf#124846 Make main menu items really move when moved

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Muhammet Kara 2019-04-22 20:07:40 UTC
Thank you Jim!