tdf#124846 Make main menu items really move when moved

This patch also fixes the Move Menu dialog move up button being enabled
when dialog is created.

Change-Id: I8432bd8d582e8a9ef449bce1d5cba703b2404c75
Reviewed-on: https://gerrit.libreoffice.org/71001
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <tietze.heiko@gmail.com>
Tested-by: Heiko Tietze <tietze.heiko@gmail.com>
Reviewed-by: Muhammet Kara <muhammet.kara@collabora.com>